packages/contracts/err.txt
cargo :    Compiling 
outcome-manager v0.0.0 (C:\U
sers\HP\Desktop\BACKit-onSte
llar\packages\contracts\outc
ome_manager)
At line:1 char:1
+ cargo test --package 
outcome-manager 2>&1 | 
Out-File -FilePath err.tx 
...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~
    + CategoryInfo          
    : NotSpecified: (   Co  
  mpiling ou...utcome_man   
 ager):String) [], Remot    
eException
    + FullyQualifiedErrorId 
    : NativeCommandError
 
warning: unused imports: 
`BytesN as _`, `Bytes`, and 
`Ledger`
 --> outcome_manager\src\tes
t.rs:4:31
  |
4 |     testutils::{Address 
as _, BytesN as _, Ledger},
  |                         
      ^^^^^^^^^^^  ^^^^^^
5 |     Address, Bytes, 
BytesN, Env, Vec,
  |              ^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: use of deprecated 
method `soroban_sdk::events:
:Events::publish`: use the 
#[contractevent] macro on a 
contract event type
 --> outcome_manager\src\eve
nts.rs:5:18
  |
5 |     
env.events().publish(
  |                  ^^^^^^^
  |
  = note: 
`#[warn(deprecated)]` on by 
default

warning: use of deprecated 
method `soroban_sdk::events:
:Events::publish`: use the 
#[contractevent] macro on a 
contract event type
  --> outcome_manager\src\ev
ents.rs:13:18
   |
13 |     
env.events().publish(
   |                  
^^^^^^^

warning: use of deprecated 
method `soroban_sdk::events:
:Events::publish`: use the 
#[contractevent] macro on a 
contract event type
  --> outcome_manager\src\ev
ents.rs:21:18
   |
21 |     
env.events().publish(
   |                  
^^^^^^^

error[E0599]: no method 
named `ed25519_keygen` 
found for struct `soroban_sd
k::crypto::Crypto` in the 
current scope
  --> outcome_manager\src\te
st.rs:14:18
   |
14 |     env.crypto().ed2551
9_keygen()
   |                  
^^^^^^^^^^^^^^ method not 
found in `soroban_sdk::crypt
o::Crypto`

error[E0599]: no method 
named `ed25519_sign` found 
for struct `soroban_sdk::cry
pto::Crypto` in the current 
scope
   --> outcome_manager\src\t
est.rs:28:18
    |
 28 |     env.crypto().ed255
19_sign(secret, &msg)
    |                  
^^^^^^^^^^^^
    |
help: there is a method 
`ed25519_verify` with a 
similar name, but with 
different arguments
   --> C:\Users\HP\.cargo\re
gistry\src\index.crates.io-1
949cf8c6b5b557f\soroban-sdk-
23.5.1\src\crypto.rs:141:5
    |
141 |     pub fn 
ed25519_verify(&self, 
public_key: &BytesN<32>, 
message: &Bytes, signature: 
&BytesN<64>) {
    |     ^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^

warning: use of deprecated 
method `soroban_sdk::Env::re
gister_contract`: use 
`register`
  --> outcome_manager\src\te
st.rs:36:27
   |
36 |     let contract_id = 
env.register_contract(None, 
OutcomeManager);
   |                        
   ^^^^^^^^^^^^^^^^^

warning: use of deprecated 
method `soroban_sdk::Env::re
gister_contract`: use 
`register`
  --> outcome_manager\src\te
st.rs:58:27
   |
58 |     let contract_id = 
env.register_contract(None, 
OutcomeManager);
   |                        
   ^^^^^^^^^^^^^^^^^

warning: use of deprecated 
method `soroban_sdk::Env::re
gister_contract`: use 
`register`
  --> outcome_manager\src\te
st.rs:88:27
   |
88 |     let contract_id = 
env.register_contract(None, 
OutcomeManager);
   |                        
   ^^^^^^^^^^^^^^^^^

warning: use of deprecated 
method `soroban_sdk::Env::re
gister_contract`: use 
`register`
   --> outcome_manager\src\t
est.rs:103:27
    |
103 |     let contract_id = 
env.register_contract(None, 
OutcomeManager);
    |                       
    ^^^^^^^^^^^^^^^^^

warning: use of deprecated 
method `soroban_sdk::Env::re
gister_contract`: use 
`register`
   --> outcome_manager\src\t
est.rs:209:29
    |
209 |     let contract_id2 
= env2.register_contract(Non
e, OutcomeManager);
    |                       
      ^^^^^^^^^^^^^^^^^

warning: use of deprecated 
method `soroban_sdk::Env::re
gister_contract`: use 
`register`
   --> outcome_manager\src\t
est.rs:276:27
    |
276 |     let contract_id = 
env.register_contract(None, 
OutcomeManager);
    |                       
    ^^^^^^^^^^^^^^^^^

warning: unused variable: 
`pubkey`
   --> outcome_manager\src\t
est.rs:129:19
    |
129 |     let (_, _, _, 
pubkey, client) = 
setup_single_oracle(&env);
    |                   
^^^^^^ help: if this is 
intentional, prefix it with 
an underscore: `_pubkey`
    |
    = note: 
`#[warn(unused_variables)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused variable: 
`mock_registry`
   --> outcome_manager\src\t
est.rs:186:13
    |
186 |     let (_, 
mock_registry, 
oracle_secret, 
oracle_pubkey, client) = 
setup_single_oracle(&env);
    |             
^^^^^^^^^^^^^ help: if this 
is intentional, prefix it 
with an underscore: 
`_mock_registry`

warning: unused variable: 
`client`
   --> outcome_manager\src\t
est.rs:186:58
    |
186 |     let (_, 
mock_registry, 
oracle_secret, 
oracle_pubkey, client) = 
setup_single_oracle(&env);
    |                       
                            
       ^^^^^^ help: if this 
is intentional, prefix it 
with an underscore: 
`_client`

warning: unused variable: 
`signed`
   --> outcome_manager\src\t
est.rs:192:9
    |
192 |     let signed = 
SignedOutcome {
    |         ^^^^^^ help: 
if this is intentional, 
prefix it with an 
underscore: `_signed`

For more information about 
this error, try `rustc 
--explain E0599`.
warning: `outcome-manager` 
(lib test) generated 14 
warnings
error: could not compile 
`outcome-manager` (lib 
test) due to 2 previous 
errors; 14 warnings emitted
